# opengl-drawings

./: .clang-format  CMakeLists.txt  run.sh
src/: main.cpp
